--- a/Get Started/first-run.mdx
+++ b/Get Started/first-run.mdx
@@ -1,6 +1,6 @@
 This guide will give some inspiration to start working with Devin. Start with Devin sessions that are **smaller in scope**, **well-documented**, **easily verifiable** and ****that have **a quick feedback loop**.
 
-## 🏃 Start a run with Devin
+## Start a run with Devin
 
 ---
 
@@ -8,9 +8,9 @@ We’ve seen folks build voice transcription apps, fine-tuned LLM apps, data ana
 
 Get creative!
 
-**🎉 Devin builds a celebratory confetti web app** 
+**Devin builds a celebratory confetti web app** 
 
-```python
+```
 write a vanillajs webapp that, when i click a button "Celebrate", makes confetti rain down the screen. call it "Devin's Party Page"
 ```
 
@@ -18,9 +18,9 @@ Link to the session: [Devin’s Confetti Webapp](https://preview.devin.ai/devin/
 
 Webapp: https://animated-frangollo-1fbb37.netlify.app/
 
-📈 **Devin self-hosts Redash**
+**Devin self-hosts Redash**
 
-```python
+```
 please self host redash server, connect a local sqlite database. add some dummy data and create an example query & dashboard.
 ```
 
@@ -28,23 +28,21 @@ Link to the session: [Self-host redash server](https://preview.devin.ai/sessions
 
 🖥️ **Set up [nfoert/cardie](https://github.com/nfoert/cardie) for local development and testing**
 
-```python
+```
 Get [**https://github.com/nfoert/cardie**](https://github.com/nfoert/cardie) set up and running
 ```
 
 Link to the session: [Set up nfoert/cardie repository](https://preview.devin.ai/sessions/4d85f7893df3479b9be50ec458cc9684)
 
-💡 Here are many more example tasks Devin has worked on for our users.
+Here are many more example tasks Devin has worked on for our users.
 
----
-
-📔 **Host + pre-populate a jupyter notebook**
+**Host + pre-populate a jupyter notebook**
 
 Example Session: [Netlix Shows/Movies by Country](https://preview.devin.ai/devin/4f803558dc1e45ddb489fb93848015ae)
 
 Example Session: [Average California Real Estate Price by City](https://preview.devin.ai/devin/8ee352ce5bdb46fa8b345d7b8db5e1c6)
 
-```python
+```
 Playbook: Translate Python Notebook to Script
 
 ## Overview
@@ -89,7 +87,7 @@ Example Session: [Pytorch visualization](https://preview.devin.ai/devin/8fe32e3a
 
 Example Session: [Drawdb visualization](https://preview.devin.ai/devin/d98c5e3b4bef43c88b395a0862c36d76)
 
-```python
+```
 ## Overview
 Given a link to a github repository, use Gource to visualise the git history.
 
@@ -140,7 +138,7 @@ Example Session: [Visualizing Data Series with Color Gradients](https://preview.
 
 Example Session: [Optimizing Gambling Strategies](https://preview.devin.ai/devin/453af5136fea4500a8e3956e2644a8a8)
 
-```docker
+```
 Playbook: Translate Python Notebook to Script
 
 ## Overview
@@ -179,7 +177,7 @@ Translate a python notebook into a script that takes CLI arguments and writes ar
 3. Try the `savefig` option to save the inline visualisations in a file
 ```
 
-**🍔 Place an order on DoorDash**
+**Place an order on DoorDash**
 
 Example Session: [Order an acai bowl](https://preview.devin.ai/devin/5893f431e6af4b19b1cb3fa6efbafc14) 
 
