--- a/Working with Teams/using-playbooks.mdx
+++ b/Working with Teams/using-playbooks.mdx
@@ -1,1 +1,39 @@
+## How to use Playbooks
 
+To use playbooks simply select one from your Team or the Community library. You’ve successfully attached a playbook if you see a a blue pill appear, along with an inline component for editing the playbook before starting your session 
+
+[Screen Recording 2024-07-30 at 11.16.30 PM.mov](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/8af7a128-b865-42a6-8058-53abd267015c/Screen_Recording_2024-07-30_at_11.16.30_PM.mov)
+
+Alternatively, you can attach a `<filename>.devin.md` file when you start your Devin session…
+
+[Screen Recording 2024-04-11 at 9.55.09 PM.mov](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/8b259904-ddb9-4c0a-82e0-345056ef9232/Screen_Recording_2024-04-11_at_9.55.09_PM.mov)
+
+Once you start the session, you should see your playbook show up with a grey background in the chat with Devin!
+
+![Screenshot 2024-04-11 at 9.57.27 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/fc9aab99-07b6-4710-9338-276c8f0b20f3/Screenshot_2024-04-11_at_9.57.27_PM.png)
+
+## Refining Playbooks
+
+As you run a new playbook with Devin, you’ll identify opportunities to improve the instructions so that Devin can complete the task and more reliably. Here are some helpful features to **iterate on playbooks live**:
+
+### Rollback: Restore live sessions to a previous point in the run
+
+Rewind Devin’s memory and file system to any past moment in time and resume - useful for undoing wrong decisions, exploring alternative solutions, quickly iterating on playbooks/prompts, and more.
+
+Simply scrub through the session timeline on the righthand side and restore the checkpoint of the session you would like to go back to.
+
+![Screenshot 2024-06-27 at 3.52.52 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/caba1de4-7c79-4f82-a751-16d6ed1a0b1d/Screenshot_2024-06-27_at_3.52.52_PM.png)
+
+### Edit playbook steps and then rollback
+
+You can now edit playbooks while you’re running a session! If Devin isn’t responding to the playbook instructions as desired, you can rollback to a previous state in the session, edit the step in the playbook you want to make clearer for Devin, and retry the individual step.
+
+This will allow you to test and iterate to make the playbook more reliable, much faster!
+
+![Screenshot 2024-06-27 at 3.51.34 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/020bd793-3802-42a2-9e2b-8915ea94e9bf/Screenshot_2024-06-27_at_3.51.34_PM.png)
+
+## Example Gallery
+
+Check out the Community Gallery at https://preview.devin.ai/playbooks! 
+
+![Screenshot 2024-05-31 at 7.09.40 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/8fbe72fb-6764-4a97-845c-3c9e2620eeb9/33a9cbc9-33a5-4f7c-8cca-ef07927e70a7.png)
