--- a/Working with Teams/writing-playbooks.mdx
+++ b/Working with Teams/writing-playbooks.mdx
@@ -1,1 +1,56 @@
+<aside>
+💡 At the end of the day, Playbooks are just prompts! 
 
+The best practices shared in this guide are recommended to unlock Devin’s capabilities and improve Devin’s reliability, but are not required. 
+
+Just as with prompt engineering, we expect to learn a lot together over time, and we encourage experimentation to find the methods that work best for you!
+
+</aside>
+
+This guide shares best practices for writing Playbooks.
+
+### **Start with a specific task you’re familiar with**
+
+To start, don't worry about making something general or reusable; **focus on getting Devin to do 1 specific task reliably.**
+
+### **Write ## Procedure**
+
+- The Procedure should have **one step per line**, each line written imperatively.
+- The Procedure should span the entire scope of the task.
+- Include at least one step for setup, the actual task, and delivery.
+- Aim to make the steps **Mutually Exclusive** and **Collectively Exhaustive**
+- **Additional Tips**
+    - The Procedure section should help you define order of actions Devin should take - like if/else/loops/goto in code
+    - **Don’t make (sub-)tasks too specific unless you really need to;** this can reduce Devin’s ability to problem-solve
+    - Each procedure step should contain an action verb - e.g. Write, Navigate to, etc.
+
+### Write **## Advice and Pointers**
+
+- You have a preferred way of completing the tasks.
+- Advice applies more globally. Otherwise, if the advice only applies to one Procedure step, write the advice under the procedure step - use nested bullet points.
+- You are correcting Devin’s priors. These can function like comments on the pseudocode (**Procedure)** that influence its execution.
+
+### Write **## Specification**
+
+The **Specifications** section can be helpful to describe the postconditions of the playbook — what should be true once Devin is done?
+
+### Write **## What’s Needed From User**
+
+Think through if anything is necessary but outside of Devin’s control. For example, if the user needs to provide a token to Devin.
+
+### **Other Tips + Tactics**
+
+- **Iterate and improve through trial and error**
+    - Running 2+ Devins in parallel with the same playbook to quickly identify possible errors.
+    - If Devin needs help, chat with it to help it along. Then add to your playbook so Devin succeeds without intervention next time.
+- **Tell Devin what good looks like**
+    - Be explicit about what the deliverable is & how Devin should communicate the fact that it’s done (e.g. what files to attach or links to share, if any)
+- **Optimize how quickly your playbook takes to run**
+    - Explore the different decisions Devin can make, and guide Devin down the most efficient path in the playbook.
+- **Specific commands, incantations and strings are fair game**
+    - They can be the difference maker between a working playbook and a broken one.
+    - For example, the following can be a very good detail to include because alloy and tts-1 are probably not things Devin would've picked otherwise, and this guides Devin in a direction that is more likely to succeed!
+    
+    ```
+    3. Create request dict with model: "tts-1", voice: "alloy", text: <passed text from user>
+    ```
