--- a/Get Started/devin-intro.mdx
+++ b/Get Started/devin-intro.mdx
@@ -1,4 +1,7 @@
-# Introducing Devin
+---
+title: "Introducing Devin"
+description: "Welcome to Devin!"
+---
 
 Devin is an autonomous AI software engineer that can write, run and test code, helping software engineers work on personal tasks or their team projects. Devin has helped build websites, web applications, review and fix bugs, support code migrations and even day-to-day assistant tasks like ordering on Amazon or DoorDash!
 
