--- a/Get Started/quickstart.mdx
+++ b/Get Started/quickstart.mdx
@@ -1,3 +1,8 @@
+---
+title: "Quickstart"
+description: "Start building with Devin"
+---
+
 ## Give Devin access to your GitHub
 
 [Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/2ef30e71-3796-4dbe-8ed7-7c7da4704104/Untitled.mp4)
