--- a/Learn about Devin/prompting.mdx
+++ b/Learn about Devin/prompting.mdx
@@ -1,10 +1,13 @@
-# Prompting Advice
+---
+title: "Prompting Advice"
+description: "Tips on how to best prompt and redirect Devin"
+---
 
 Devin needs guidance to make sure it knows what tasks to execute, and more importantly, any preference in how it should execute those tasks. If not specified, Devin will make its own judgment calls. 
 
 Here are some of our recommended guidelines on how to most successfully prompt Devin:
 
-### 🎯 Be specific
+## Be specific
 
 Provide clear, detailed instructions or requirements for Devin to follow when executing a given task. Some potential tactics:
 
@@ -16,22 +19,22 @@ Provide clear, detailed instructions or requirements for Devin to follow when ex
 
 Nothing is “too obvious” for Devin so more detail is better, but it will do its best to clarify and ask questions along the way.
 
-### 🪓 Split complex tasks into simpler sub-tasks, even sessions
+## Split complex tasks into simpler sub-tasks, even sessions
 
 As with any entry-level engineer, Devin is more likely to struggle with complex, longer tasks. Break down a complex project or tasks into sub-tasks as much as possible. In fact, we recommend breaking down tasks into separate sessions entirely.
 
-### 📔 Use Playbooks
+## Use Playbooks
 
 For multistep tasks where you see your prompt getting lengthy, we suggest using [Playbooks](https://www.notion.so/Guide-to-Devin-Playbooks-0cf0ee2fe8734f8daf67e4508523bf14?pvs=21).  Playbooks are like custom system prompts — they allow Devin to perform better and more reliably on longer tasks.
 
-### 🔖 Provide references or examples
+## Provide references or examples
 
 When available, link documentation, websites or example outputs that are helpful and relevant for the task.  If you don’t provide any resources, Devin will search for documentation to support it in the task independently, and may make discretionary decisions on which documentation to use or path to take if there are multiple options.
 
-### ⏰ Ask for an ETA
+## Ask for an ETA
 
 Check with Devin how long it will take it to complete a given tasks. It may not always be accurate, but it will help you understand if the task is too large, or when to come back and check in on the progress Devin is making.
 
-### ✍️ Jump in!
+## Jump in!
 
 The browser and editor allow you to interact with Devin’s machine and “take over” from Devin when necessary. We highly recommend playing with this feature to make real-time edits or help Devin navigate complicated browser steps like CAPTCHAs.
