--- a/Onboard Devin/knowledge.mdx
+++ b/Onboard Devin/knowledge.mdx
@@ -1,3 +1,8 @@
+---
+title: "Knowledge"
+description: "Share important context and knowledge so Devin can get onboarded faster"
+---
+
 ## What is Knowledge?
 
 **Knowledge** is a collection of tips, advice, and instructions that Devin can reference in all runs. You can continually add to Devin’s bank of knowledge over time, and Devin will automatically recall relevant knowledge as necessary.
