--- a/Onboard Devin/secrets.mdx
+++ b/Onboard Devin/secrets.mdx
@@ -1,3 +1,8 @@
+---
+title: "Secrets & Site Cookies"
+description: "Securely share credentials with Devin so it can access any tool"
+---
+
 ## **Working with Secrets**
 
 Every now and then we may want Devin to access a protected web resource. While Devin is working, you can provide Devin with credentials (API keys, logins, etc.) within the current conversation, like so…
