--- a/Onboard Devin/snapshots.mdx
+++ b/Onboard Devin/snapshots.mdx
@@ -1,3 +1,8 @@
+---
+title: "Machine Snapshots"
+description: "Save Devin's machine state to reuse or build upon in future sessions"
+---
+
 ## Quickstart: Your First Machine Snapshot
 
 To get started with Devin, we recommend creating one (or more) snapshots that allow Devin to easily run startup commands, clone repositories, set up environments, and more, so you don’t have to do it every time you start a new sessions.
