--- a/Working with Teams/invite-team.mdx
+++ b/Working with Teams/invite-team.mdx
@@ -1,4 +1,7 @@
-# Invite your Team
+---
+title: "Invite your Team"
+description: "Only available for Team and Enterprise plans"
+---
 
 Add members to your Devin organization so you can collaborate with your team and create sessions within the same org. 
 
