--- a/Working with Teams/multidevin.mdx
+++ b/Working with Teams/multidevin.mdx
@@ -1,11 +1,9 @@
-# MultiDevin
+---
+title: "MultiDevin"
+description: "Let Devin create other Devins to delegate and accelerate work"
+---
 
 ## What is MultiDevin? How does it work?
-
-<aside>
-MultiDevin is currently only available to Enterprise users
-
-</aside>
 
 MultiDevin is a version of Devin that constitutes 1 “manager” Devin and up to 10 “worker” Devins. The manager Devin creates the worker Devins, distributes a task to each worker Devin, then merges the changes from all *successful* worker Devins into one branch or pull request. 
 
