--- a/Working with Teams/playbooks-intro.mdx
+++ b/Working with Teams/playbooks-intro.mdx
@@ -1,3 +1,8 @@
+---
+title: "Introduction to Playbooks"
+description: "Build a library of reusable prompts for your organization"
+---
+
 ## What are Playbooks?
 
 ### Playbooks easily shareable, reusable prompts
