--- a/Working with Teams/using-playbooks.mdx
+++ b/Working with Teams/using-playbooks.mdx
@@ -1,3 +1,7 @@
+---
+title: "Using Playbooks"
+---
+
 ## How to use Playbooks
 
 To use playbooks simply select one from your Team or the Community library. You’ve successfully attached a playbook if you see a a blue pill appear, along with an inline component for editing the playbook before starting your session 
