--- a/Working with Teams/writing-playbooks.mdx
+++ b/Working with Teams/writing-playbooks.mdx
@@ -1,13 +1,8 @@
-<aside>
-💡 At the end of the day, Playbooks are just prompts! 
+---
+title: "Writing Playbooks"
+description: "What to do - and not to do - when writing Playbooks"
+---
 
-The best practices shared in this guide are recommended to unlock Devin’s capabilities and improve Devin’s reliability, but are not required. 
-
-Just as with prompt engineering, we expect to learn a lot together over time, and we encourage experimentation to find the methods that work best for you!
-
-</aside>
-
-This guide shares best practices for writing Playbooks.
 
 ### **Start with a specific task you’re familiar with**
 
