--- a/security.mdx
+++ b/security.mdx
@@ -1,7 +1,7 @@
-<aside>
-🛡️ We want Devin to be a core contributor in your organization, and have prioritized security, data privacy and compliance to make it possible.
-
-</aside>
+---
+title: "Security at Cognition"
+description: "We want Devin to be a core contributor in your organization, and have prioritized security, data privacy and compliance to make it possible"
+---
 
 ## Security
 
