--- a/Collaborate with Devin/browser.mdx
+++ b/Collaborate with Devin/browser.mdx
@@ -1,4 +1,7 @@
-# Interactive Browser
+---
+title: "Interactive Browswer"
+description: "Help Devin navigate through its browser"
+---
 
 Interactive Browser allows users to directly use Devin’s browser. 
 
