--- a/Collaborate with Devin/machine.mdx
+++ b/Collaborate with Devin/machine.mdx
@@ -1,8 +1,7 @@
-# Interacting with Devin's Machine
-
-Have you ever wanted to work ***with*** Devin?
-
-You are now able to use and interact with editor and shell! This let's you read and edit files on Devin’s machine just like if you were working with Devin in VSCode. You can also open up a terminal, which means you have **full access** to Devin’s machine.
+---
+title: "Interacting with Devin's Machine"
+description: "Work with Devin's editor and shell in VSCode"
+---
 
 ## How to access Devin’s Machine
 
