--- a/Collaborate with Devin/worklog.mdx
+++ b/Collaborate with Devin/worklog.mdx
@@ -1,4 +1,7 @@
-# Devin's Work Log
+---
+title: "Devin's Work Log"
+description: "Keep track of Devin's progress and completed tasks"
+---
 
 You can now easily track and review what Devin’s accomplished with the Work Log in the Planner tab! In Devin’s workspace, go to the Planner and click each step to read Devin’s retro of its work.
 
