--- a/Working with Teams/integrations.mdx
+++ b/Working with Teams/integrations.mdx
@@ -79,13 +79,19 @@ We recommend setting up an specific channel (e.g. **#devin-runs**) to keep all o
 
 ### Permissions
 
+| Permission                         | Description                                                       | Rationale              
+| ---------------------------------- | ----------------------------------------------------------------- |  ------------------------------------------------|  
+| `chat:write, chat:write.customize` | Send messages as @Devin or using a customized username and avatar | Devin has to be able to respond to user requests |
+                     |
+
+
+
 The Devin Slackbot requires the following permissions
 
-- `chat:write, chat:write.customize`:
+- 
     
-    Send messages as @Devin or using a customized username and avatar
     
-    **Reason for request**: Devin has to be able to respond to user requests
+    **Reason for request**: 
     
 - `commands`:
     
